--- a/Terrain-Rendering/Terrain-Rendering.vcxproj
+++ b/Terrain-Rendering/Terrain-Rendering.vcxproj
@@ -159,7 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Libraries\include\glad\glad\glad.c" />
+    <ClCompile Include="Libraries\include\glad\glad.c" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
