--- a/Terrain-Rendering/Terrain-Rendering.vcxproj.filters
+++ b/Terrain-Rendering/Terrain-Rendering.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\include\glad\glad\glad.c">
+    <ClCompile Include="Libraries\include\glad\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
